lib/src/compiler/tests/testdata/errors/153.out
error[E001]: syntax error
 --> line:3:10
  |
3 |     $a = “foo”
  |          ^^^^^ expecting STRING, regexp or `{`, found `“foo”`